# dsp-lin-yang

./: .gitignore  my-1st-notebook.ipynb  package_test.ipynb  requirements.txt
house_price_modeling_lin_yang/: pyproject.toml
house_price_modeling_lin_yang/house_price_modeling_packaging/: __init__.py
house_price_modeling_lin_yang/house_price_modeling_packaging/src/house_prices_prediction_lin/: train.py
house_prices/: inference.py  preprocess.py  train.py
models/: ohe.joblib  scaler.joblib
notebooks/: house-prices-modeling-refactored.ipynb  house-prices-modeling.ipynb  model-industrialization-1.ipynb  model-industrialization-final.ipynb  my-1st-jupyter-notebook.ipynb  my-1st-notebook.ipynb
packaging/: README.md  pyproject.toml
packaging/src/house_prices_prediction_lin/: inference.py  preprocess.py
tests/: test_preprocess.py
